--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,18 @@ main{
 
 .section-title{
     color: #562EFF;
-    font-size: 24px
+    font-size: 24px;
+    margin-top: 0px;
 }
 
 /* top player style  */
+.top-players{
+    margin-bottom: 30px;
+}
 .players{
     display:grid;
     grid-template-columns: repeat(3, 1fr);
+    row-gap: 30px;
 }
 .player{
     display: flex;
@@ -36,4 +41,8 @@ main{
 }
 .player-name{
     margin-left: 16px;
+    font-size: 18px;
+}
+hr{
+    border: 1px solid #D1D1D1;
 }
